add layout template and content block

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,7 +6,7 @@
     {% if title%}
         <title>Neka's Portfolio Site - {{ title }}</title>
     {% else%}
-        <title>Neka's Blog</title>
+        <title>Neka's Portfolio Site</title>
     {% endif%}
 </head>
 <body>
