--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,4 @@
 {% extends "layout.html" %}
 {% block content %}
-    {%for post in posts%}<!--start of code block-->
-        <h1>{{ post.title }}</h1><!--dot notation works-->
-        <p>By {{ post.author }} on {{ post.date_posted }}</p>
-        <p>{{ post.content }}</p>
-    {%endfor%}<!--end of code block-->
+<h1>Home Page</h1>
 {% endblock content %}<!--adding extra information in endblock of content to make sure I can distinguish one block from another, future proofing my code-->
