--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,4 @@
-<!-- layout so we keep our code DRY, reusing code that we already made and overwriting what we need for each individual page -->
+<!-- layout so we keep our code DRY, reusing code that we already made and overwriting what we need for each individual page aka, template inheritance-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
