--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     {% if title%}
         <title>Neka's Portfolio Site - {{ title }}</title>
     {% else%}
@@ -11,6 +12,9 @@
     {% endif%}
 </head>
 <body>
-    {% block content %}{% endblock %} <!--resuable content block that can be overridden elsewhere-->
+    <div class="container">
+        {% block content %}{% endblock %} <!--resuable content block that can be overridden elsewhere-->
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
