--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if title%}
-        <title>Neka's Portfolio Site - {{ title }}</title>
-    {% else%}
-    <title>Neka's Portfolio Site</title>
-    {% endif%}
-</head>
-<body>
-    <h1>Projects</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+<h1>Projects</h1>
+{% endblock content %}
